@@ -1,3 +1,5 @@
+* Fix error when calling Event.stopObserving(window). (jddalton) [#30 state:resolved]
+
 * Fix an issue with calling Event.pointer before the DOM is loaded. (kangax, jddalton) [#4 state:resolved]
 
 * Refactor unit tests. Unit tests are now dynamically generated from a JavaScript test file and optional HTML, JS and CSS fixtures. [Tobie Langel]
